--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: do_an_tot_nghiep
 description: A new Flutter project.
 version: 1.0.0+1
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.18.5 <3.0.0'
 dependencies: 
   flutter: 
     sdk: flutter
@@ -15,7 +15,6 @@ dependencies:
   play_kit: ^0.0.2
   date_time_picker: ^2.1.0
   responsive_sizer: ^3.1.0
-  data_table_2: ^2.3.7
   table_calendar: ^3.0.7
   intl: ^0.17.0
   date_format: ^2.0.7
@@ -31,6 +30,9 @@ dependencies:
   image_cropper: ^3.0.0
   flutter_web_data_table: ^1.0.0
   flutter_datetime_picker: ^1.5.1
+  qr_flutter: ^4.0.0
+  fl_chart: ^0.36.1
+  
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
