--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   qr_flutter: ^4.0.0
   fl_chart: ^0.36.1
+  firebase_storage: ^11.0.14
+  firebase_core: ^2.7.0
+  flutter_spinkit: ^5.1.0
+
   
 dev_dependencies: 
   flutter_test: 
