--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.0.14
   firebase_core: ^2.7.0
   flutter_spinkit: ^5.1.0
+  slide_digital_clock: ^1.0.0
 
   
 dev_dependencies: 
