--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   firebase_core: ^2.7.0
   flutter_spinkit: ^5.1.0
   slide_digital_clock: ^1.0.0
-
-  
+  simple_animations: ^4.1.0
+  pin_code_fields: ^7.4.0
+  supercharged: ^2.1.1
+  dropdown_button2: ^1.9.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
