--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   pin_code_fields: ^7.4.0
   supercharged: ^2.1.1
   dropdown_button2: ^1.9.2
+  syncfusion_flutter_xlsio: ^20.3.59-beta
+  excel: ^2.0.0-null-safety-3
+  path_provider: ^2.0.3
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
