--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   syncfusion_flutter_xlsio: ^20.3.59-beta
   excel: ^2.0.0-null-safety-3
   path_provider: ^2.0.3
+  flutter_staggered_animations: ^1.0.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
