--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   excel: ^2.0.0-null-safety-3
   path_provider: ^2.0.3
   flutter_staggered_animations: ^1.0.0
+  multi_select_flutter: ^4.1.3
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
