--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   supercharged: ^2.1.1
   dropdown_button2: ^1.9.2
   syncfusion_flutter_xlsio: ^20.3.59-beta
-  excel: ^2.0.0-null-safety-3
+  excel: ^2.0.4
   path_provider: ^2.0.3
   flutter_staggered_animations: ^1.0.0
   multi_select_flutter: ^4.1.3
