--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.0.3
   flutter_staggered_animations: ^1.0.0
   multi_select_flutter: ^4.1.3
+  flutter_multi_select_items: ^0.4.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
