--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   multi_select_flutter: ^4.1.3
   flutter_multi_select_items: ^0.4.2
+  jwt_decoder: ^2.0.1
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
